--- a/src/components/InformationMeStyles.css
+++ b/src/components/InformationMeStyles.css
@@ -67,7 +67,7 @@
   background-color: #2243b6;
 }
 
-.schedule @media screen and (max-width: 850px) {
+@media screen and (max-width: 850px) {
   .information-me {
     margin: 4rem 2rem;
   }
